<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/fondoItem"
    android:gravity="center_vertical|center|center_horizontal"
    android:textAlignment="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/icono"/>
        <TextView
            android:text="@string/dialogo_titulo_recuperar_clave"
            android:layout_width="160dp"
            android:layout_height="44sp"
            android:textSize="22sp"
            android:textColor="@color/primary_dark"
            android:background="@color/fondoItem"
            android:contentDescription="@string/app_name"
            android:layout_gravity="right"
            android:gravity="center_vertical|center|center_horizontal"
            android:textAlignment="center"
            android:textStyle="bold"
            android:shadowColor="@color/accent" />
    </LinearLayout>

    <TextView
        android:id="@+id/recuperar"
        android:layout_marginTop="20dp"
        android:text="@string/dialogo_mensaje_recuperar_clave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/primary_dark"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/claveReuperar"
        android:text="                "
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColor="@color/colorAccent2"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>